# piper

./: .gitignore  CMakeLists.txt  Makefile  README.md  example.cpp  example2.cpp  example3.cpp  example4.cpp  main.cpp
docs/: design
include/: line_type.hpp  message_type.hpp  node.h  pipeline_system.h  piper.h  queue.h  stats.h  statz.hpp  storage_container.h  transform_type.hpp
include/util/: a.hpp  threadname.hpp
src/: node.cpp  pipeline_system.cpp  queue.cpp  stats.cpp  storage_container.cpp
